add slide key download link

--- a/index/index.html
+++ b/index/index.html
@@ -5,6 +5,8 @@
     <title>polymer-tutorial</title>
 </head>
 <body>
+    all demos in <a href="http://pan.baidu.com/s/1pJCyMt9">polymer slide</a> for imweb 2014 salon
+    <hr>
     <h2>webcomponents demos</h2>
     <ul>
         <li><a href="../0-webcomponents/1-input-range.html">1-input-range</a></li>
