--- a/index/index.html
+++ b/index/index.html
@@ -15,7 +15,8 @@
         <li><a href="../0-webcomponents/4-template.html">4-template</a></li>
         <li><a href="../0-webcomponents/5-2card.html">5-2card</a></li>
         <li><a href="../0-webcomponents/6-3card.html">6-3card</a></li>
-        <li><a href="../0-webcomponents/7-attributeChange.html">7-attributeChange</a>
+        <li><a href="../0-webcomponents/7-attributeChange.html">7-attributeChange</a></li>
+        <li><a href="../0-webcomponents/8-html-import/">8-html-import</a></li>
     </ul>
     <h2>polymer demo1</h2>
     <ul><li><a href="../1-1/">last demo in polymer</a></li></ul>
